# webrtc_agc

./: README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/webrtc_agc_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: webrtc_agc.podspec
ios/Classes/: webrtc_agc.c
lib/: webrtc_agc.dart  webrtc_agc_bindings_generated.dart
macos/: webrtc_agc.podspec
macos/Classes/: webrtc_agc.c
src/: CMakeLists.txt  agc.c  webrtc_agc.c  webrtc_agc.h
